--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;*/
-  user-select: none;
+  /*user-select: none;*/
 }
 
 
